Fixes z-index incorrectly set (#9931)

--- a/http_src/views/private/clients/white-mode.scss
+++ b/http_src/views/private/clients/white-mode.scss
@@ -1116,7 +1116,6 @@ li.select2-selection__choice {
   padding: 0 !important;
   margin: 0 !important;
   pointer-events: auto !important;
-  pointer-events: auto !important;
   position: relative !important;
   z-index: 1 !important;
 }
